--- a/Java基础/数据类型.md
+++ b/Java基础/数据类型.md
@@ -1,4 +1,4 @@
-1.基本类型
+##### 1.基本类型
 
 ```java
 byte	//8 字节
@@ -68,7 +68,7 @@ boolean	//~
     */
 ```
 
-2.包装类型				
+##### 2.包装类型				
 
 ```java
 //基本类型都有对应的包装类型，基本类型与其对应的包装类型之间的赋值使用自动装箱与拆箱完成。
@@ -76,7 +76,7 @@ Integer x = 2;     // 装箱 调用了 Integer.valueOf(2)
 int y = x;         // 拆箱 调用了 X.intValue()
 ```
 
-2.1缓存池
+##### 2.1缓存池
 
 ```java
 	Integer x = new Integer(123);
