--- a/Java基础/数据类型.md
+++ b/Java基础/数据类型.md
@@ -1,7 +1,7 @@
 ##### 1.基本类型
 
 ```java
-byte	//8 字节
+byte	//8 位 1字节
     /*
     byte 数据类型是8位、有符号的，以二进制补码表示的整数；
 	最小值是 -128（-2^7）；
@@ -10,7 +10,7 @@ byte	//8 字节
 	byte 类型用在大型数组中节约空间，主要代替整数，因为 byte 变量占用的空间只有 int 类型的四分之一；
 	例子：byte a = 100，byte b = -50。
     */
-char	//16 字节
+char	//16 位 2字节
     /*
     char 类型是一个单一的 16 位 Unicode 字符；
 	最小值是 \u0000（十进制等效值为 0）；
@@ -19,7 +19,7 @@ char	//16 字节
 	例子：char letter = 'A';。
     */
 
-short	//16 字节
+short	//16 位 2 字节
     /*
     short 数据类型是 16 位、有符号的以二进制补码表示的整数
 	最小值是 -32768（-2^15）；
@@ -28,7 +28,7 @@ short	//16 字节
 	默认值是 0；
 	例子：short s = 1000，short r = -20000。
     */
-int		//32 字节
+int		//32 位 4字节
     /*
     int 数据类型是32位、有符号的以二进制补码表示的整数；
 	最小值是 -2,147,483,648（-2^31）；
@@ -37,7 +37,7 @@ int		//32 字节
 	默认值是 0 ；
 	例子：int a = 100000, int b = -200000。
     */
-float	//32 字节
+float	//32 位 4 字节
     /*
     float 数据类型是单精度、32位、符合IEEE 754标准的浮点数；
 	float 在储存大型浮点数组的时候可节省内存空间；
@@ -45,7 +45,7 @@ float	//32 字节
 	浮点数不能用来表示精确的值，如货币；
 	例子：float f1 = 234.5f。
     */
-long	//64 字节
+long	//64 位 8 字节
     /*
     long 数据类型是 64 位、有符号的以二进制补码表示的整数；
     最小值是 -9,223,372,036,854,775,808（-2^63）；
@@ -55,7 +55,7 @@ long	//64 字节
     例子： long a = 100000L，long b = -200000L。
     "L"理论上不分大小写，但是若写成"l"容易与数字"1"混淆，不容易分辩。所以最好大写。
     */
-double	//64 字节
+double	//64 位 8 字节
     /*
     double 数据类型是双精度、64 位、符合 IEEE 754 标准的浮点数；
 	浮点数的默认类型为 double 类型；
